--- a/src/styles/responsive.css
+++ b/src/styles/responsive.css
@@ -5,10 +5,16 @@
         justify-content: space-between; 
         align-items: center;
         padding: 0 10px;
-        width: 100%;
+
+        left: 0 !important;
+        transform: none !important;
+        width: 100% !important;
         max-width: 100vw;
+        margin-top: 0 !important;
+        border-radius: 0 !important;
+
         box-sizing: border-box;
-        overflow-x: hidden;
+        overflow: visible !important;
     }
 
     .nav-container {
@@ -24,13 +30,14 @@
         position: fixed;
         top: 0;
         left: -100%;
-        width: 70%;
-        height: 100%;
+        width: 70vw;
+        height: 100vh;
         background-color: rgb(66, 62, 62);
         padding: 0 !important; 
         margin: 0 !important;   
         list-style: none;
         transition: left 0.3s ease-in-out;
+        z-index: 2000;
     }
 
     .nav-tabs li {
